<?xml version="1.0"?>
<package format="2">
  <name>inaho_vehicle_msgs</name>
  <version>0.0.0</version>
  <description>The inaho_vehicle_msgs package</description>
  <maintainer email="info@inaho.co">inaho Inc.</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
</package>
